FINALISATION (#31)
* Refactor: de-identify branding, replace enums with Strings, add admin password management, fix UI display bugs (#25)

* Initial plan

* Refactor: remove branding, replace enums with Strings, remove About page and footer

Co-authored-by: Geiger-J <155436029+Geiger-J@users.noreply.github.com>

* Fix UI bugs, remove updatedAt, add admin password management

Co-authored-by: Geiger-J <155436029+Geiger-J@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: Geiger-J <155436029+Geiger-J@users.noreply.github.com>

* Enhance admin/student UX: delete requests, archive toggles, account deletion, password UX, design overhaul (#27)

* Initial plan

* Implement all feature requirements: delete requests, archive toggles, password UX, account deletion, design overhaul

Co-authored-by: Geiger-J <155436029+Geiger-J@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: Geiger-J <155436029+Geiger-J@users.noreply.github.com>

* Cascading request cancellation, auto DONE scheduler, simulation time, new READMEs (#28)

* Initial plan

* Fix user deletion logout, nav header, index contact info, mailto link, cancel restrictions, password toggle

Co-authored-by: Geiger-J <155436029+Geiger-J@users.noreply.github.com>

* Add scheduler DONE transition, simulation time, cascade cancellation on delete, new READMEs

Co-authored-by: Geiger-J <155436029+Geiger-J@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: Geiger-J <155436029+Geiger-J@users.noreply.github.com>

* Style-only cleanup of matching flow with bullet-style inline explanations (#30)

* Initial plan

* style: add bullet-style explanations to matching logic

Co-authored-by: Geiger-J <155436029+Geiger-J@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-