@@ -1,9 +1,12 @@
 package com.example.studentportal.controller;
 
-import com.example.studentportal.model.*;
+import com.example.studentportal.model.Request;
+import com.example.studentportal.model.Subject;
+import com.example.studentportal.model.User;
 import com.example.studentportal.service.CustomUserDetailsService;
 import com.example.studentportal.service.RequestService;
 import com.example.studentportal.service.SubjectService;
+import com.example.studentportal.util.Timeslots;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -13,7 +16,6 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -23,8 +25,6 @@ import java.util.stream.Collectors;
 
 /**
  * Controller for tutoring request management.
- * Handles request creation and cancellation.
- * Only accessible to STUDENT role users.
  */
 @Controller
 @RequestMapping("/requests")
@@ -40,145 +40,95 @@ public class RequestController {
         this.subjectService = subjectService;
     }
 
-    /**
-     * Shows the request creation form.
-     * Redirects to profile if profile is not complete.
-     */
     @GetMapping("/new")
     public String showRequestForm(@AuthenticationPrincipal CustomUserDetailsService.CustomUserPrincipal principal,
                                  Model model) {
-        
+
         User user = principal.getUser();
 
-        // Check if profile is complete
         if (!user.getProfileComplete()) {
             return "redirect:/profile";
         }
 
-        // Convert userAvailability Set<Timeslot> to Set<String> for template usage
-        Set<String> userAvailabilityNames = user.getAvailability() == null ? 
-            new HashSet<>() : 
-            user.getAvailability().stream()
-                .map(Enum::name)
-                .collect(Collectors.toSet());
+        Set<String> userAvailabilityNames = user.getAvailability() != null
+                ? user.getAvailability() : new HashSet<>();
 
-        // Show only subjects that the user has in their profile (curated subjects)
         model.addAttribute("subjectGroups", getGroupedUserSubjects(user));
-        model.addAttribute("userAvailability", user.getAvailability());
         model.addAttribute("userAvailabilityNames", userAvailabilityNames);
-        model.addAttribute("timeslots", Arrays.asList(Timeslot.values()));
-        model.addAttribute("requestTypes", Arrays.asList(RequestType.values()));
+        model.addAttribute("requestTypes", List.of("TUTOR", "TUTEE"));
 
         return "request_form";
     }
 
-    /**
-     * Processes request creation.
-     * Validates data and creates the request.
-     */
     @PostMapping
     public String createRequest(@AuthenticationPrincipal CustomUserDetailsService.CustomUserPrincipal principal,
-                               @RequestParam RequestType type,
+                               @RequestParam String type,
                                @RequestParam Long subjectId,
-                               @RequestParam List<Timeslot> timeslots,
+                               @RequestParam(required = false) List<String> timeslots,
                                RedirectAttributes redirectAttributes,
                                Model model) {
-        
+
         User user = principal.getUser();
 
-        // Check if profile is complete
         if (!user.getProfileComplete()) {
             return "redirect:/profile";
         }
 
         try {
-            // Validate subject
             Subject subject = subjectService.findById(subjectId)
                 .orElseThrow(() -> new IllegalArgumentException("Invalid subject selected"));
 
-            // Validate timeslots
             if (timeslots == null || timeslots.isEmpty()) {
+                populateRequestFormModel(model, user);
                 model.addAttribute("error", "Please select at least one timeslot");
-                model.addAttribute("subjectGroups", getGroupedUserSubjects(user));
-                model.addAttribute("userAvailability", user.getAvailability());
-                
-                // Convert userAvailability Set<Timeslot> to Set<String> for template usage
-                Set<String> userAvailabilityNames = user.getAvailability() == null ? 
-                    new HashSet<>() : 
-                    user.getAvailability().stream()
-                        .map(Enum::name)
-                        .collect(Collectors.toSet());
-                model.addAttribute("userAvailabilityNames", userAvailabilityNames);
-                
-                model.addAttribute("timeslots", Arrays.asList(Timeslot.values()));
-                model.addAttribute("requestTypes", Arrays.asList(RequestType.values()));
                 return "request_form";
             }
 
-            Set<Timeslot> timeslotSet = new HashSet<>(timeslots);
+            // Validate and filter timeslot codes
+            Set<String> timeslotSet = timeslots.stream()
+                    .filter(Timeslots.ALL_CODES_SET::contains)
+                    .collect(Collectors.toCollection(HashSet::new));
 
-            // Create the request
+            if (timeslotSet.isEmpty()) {
+                populateRequestFormModel(model, user);
+                model.addAttribute("error", "Please select at least one valid timeslot");
+                return "request_form";
+            }
+
             Request request = requestService.createRequest(user, type, subject, timeslotSet);
 
-            redirectAttributes.addFlashAttribute("message", 
-                "Request created successfully! Your " + type.getDisplayName().toLowerCase() + 
+            String typeLabel = "TUTOR".equals(type) ? "offering tutoring" : "seeking tutoring";
+            redirectAttributes.addFlashAttribute("message",
+                "Request created successfully! Your " + typeLabel +
                 " request for " + subject.getDisplayName() + " has been submitted.");
 
             return "redirect:/dashboard";
 
         } catch (IllegalArgumentException e) {
+            populateRequestFormModel(model, user);
             model.addAttribute("error", e.getMessage());
-            model.addAttribute("subjectGroups", getGroupedUserSubjects(user));
-            model.addAttribute("userAvailability", user.getAvailability());
-            
-            // Convert userAvailability Set<Timeslot> to Set<String> for template usage
-            Set<String> userAvailabilityNames = user.getAvailability() == null ? 
-                new HashSet<>() : 
-                user.getAvailability().stream()
-                    .map(Enum::name)
-                    .collect(Collectors.toSet());
-            model.addAttribute("userAvailabilityNames", userAvailabilityNames);
-            
-            model.addAttribute("timeslots", Arrays.asList(Timeslot.values()));
-            model.addAttribute("requestTypes", Arrays.asList(RequestType.values()));
             return "request_form";
         } catch (Exception e) {
+            populateRequestFormModel(model, user);
             model.addAttribute("error", "Error creating request: " + e.getMessage());
-            model.addAttribute("subjectGroups", getGroupedUserSubjects(user));
-            model.addAttribute("userAvailability", user.getAvailability());
-            
-            // Convert userAvailability Set<Timeslot> to Set<String> for template usage
-            Set<String> userAvailabilityNames = user.getAvailability() == null ? 
-                new HashSet<>() : 
-                user.getAvailability().stream()
-                    .map(Enum::name)
-                    .collect(Collectors.toSet());
-            model.addAttribute("userAvailabilityNames", userAvailabilityNames);
-            
-            model.addAttribute("timeslots", Arrays.asList(Timeslot.values()));
-            model.addAttribute("requestTypes", Arrays.asList(RequestType.values()));
             return "request_form";
         }
     }
 
-    /**
-     * Cancels a request.
-     * Only allows cancelling user's own PENDING requests.
-     */
     @PostMapping("/{id}/cancel")
     public String cancelRequest(@AuthenticationPrincipal CustomUserDetailsService.CustomUserPrincipal principal,
                                @PathVariable Long id,
                                RedirectAttributes redirectAttributes) {
-        
+
         User user = principal.getUser();
 
         try {
             Request cancelledRequest = requestService.cancelRequest(id, user);
-            
-            redirectAttributes.addFlashAttribute("message", 
-                "Request cancelled successfully. Your " + 
-                cancelledRequest.getType().getDisplayName().toLowerCase() + 
-                " request for " + cancelledRequest.getSubject().getDisplayName() + 
+
+            String typeLabel = "TUTOR".equals(cancelledRequest.getType()) ? "offering tutoring" : "seeking tutoring";
+            redirectAttributes.addFlashAttribute("message",
+                "Request cancelled successfully. Your " + typeLabel +
+                " request for " + cancelledRequest.getSubject().getDisplayName() +
                 " has been cancelled.");
 
         } catch (IllegalArgumentException e) {
@@ -190,50 +140,43 @@ public class RequestController {
         return "redirect:/dashboard";
     }
 
-    /**
-     * Groups user's subjects by category for request creation
-     */
+    private void populateRequestFormModel(Model model, User user) {
+        Set<String> userAvailabilityNames = user.getAvailability() != null
+                ? user.getAvailability() : new HashSet<>();
+        model.addAttribute("subjectGroups", getGroupedUserSubjects(user));
+        model.addAttribute("userAvailabilityNames", userAvailabilityNames);
+        model.addAttribute("requestTypes", List.of("TUTOR", "TUTEE"));
+    }
+
     private Map<String, List<Subject>> getGroupedUserSubjects(User user) {
-        List<Subject> userSubjects = new ArrayList<>(user.getSubjects());
-        return groupSubjectsByCategory(userSubjects);
+        return groupSubjectsByCategory(new ArrayList<>(user.getSubjects()));
     }
-    
-    /**
-     * Groups subjects according to requirements:
-     * Languages: English, German, French
-     * STEM: Mathematics, Physics, Biology, Chemistry  
-     * Social Sciences: Economics, Politics, Business
-     */
-    private Map<String, List<Subject>> getGroupedSubjects() {
-        List<Subject> allSubjects = subjectService.getAllSubjects();
-        return groupSubjectsByCategory(allSubjects);
-    }
-    
-    /**
-     * Helper method to group subjects by category
-     */
+
     private Map<String, List<Subject>> groupSubjectsByCategory(List<Subject> subjects) {
         Map<String, List<Subject>> groups = new HashMap<>();
-        
-        groups.put("Languages", subjects.stream()
-            .filter(s -> s.getDisplayName().equals("English") || 
-                        s.getDisplayName().equals("German") || 
+
+        List<Subject> languages = subjects.stream()
+            .filter(s -> s.getDisplayName().equals("English") ||
+                        s.getDisplayName().equals("German") ||
                         s.getDisplayName().equals("French"))
-            .collect(Collectors.toList()));
-            
-        groups.put("STEM", subjects.stream()
-            .filter(s -> s.getDisplayName().equals("Mathematics") || 
-                        s.getDisplayName().equals("Physics") || 
-                        s.getDisplayName().equals("Biology") || 
+            .collect(Collectors.toList());
+        if (!languages.isEmpty()) groups.put("Languages", languages);
+
+        List<Subject> stem = subjects.stream()
+            .filter(s -> s.getDisplayName().equals("Mathematics") ||
+                        s.getDisplayName().equals("Physics") ||
+                        s.getDisplayName().equals("Biology") ||
                         s.getDisplayName().equals("Chemistry"))
-            .collect(Collectors.toList()));
-            
-        groups.put("Social Sciences", subjects.stream()
-            .filter(s -> s.getDisplayName().equals("Economics") || 
-                        s.getDisplayName().equals("Politics") || 
+            .collect(Collectors.toList());
+        if (!stem.isEmpty()) groups.put("STEM", stem);
+
+        List<Subject> social = subjects.stream()
+            .filter(s -> s.getDisplayName().equals("Economics") ||
+                        s.getDisplayName().equals("Politics") ||
                         s.getDisplayName().equals("Business"))
-            .collect(Collectors.toList()));
-            
+            .collect(Collectors.toList());
+        if (!social.isEmpty()) groups.put("Social Sciences", social);
+
         return groups;
     }
 }
